Fix bug 178425 (wrong initial sorting order in File Open dialog).

BUG:178425

svn path=/trunk/KDE/kdelibs/; revision=900764